# LoLoROSSimulation

./: .gitignore  README.txt  set_velocity.world
set_vel_plugin/: CMakeLists.txt
set_vel_plugin/src/: SetLinkVelocityPlugin.cpp
src/control/: package.xml
src/docking/: CMakeLists.txt  package.xml
src/docking/scripts/: docking.py
src/feature_extraction/: CMakeLists.txt  package.xml
src/feature_extraction/scripts/: dist.npy  image_processing.py  mtx.npy  undistort_img.py
src/perception/: CMakeLists.txt  contour.yaml  label_image_dataset.py  ost.txt  ost.yaml  package.xml  usb_camera.yaml
src/perception/image_dataset/: labels.txt
src/perception/images_presentation/: feedback-skeleton-yourname-myname.docx
src/perception/launch/: pose_estimation_simulation.launch  usb_cam-test.launch  usb_camera_calibration.launch  video_stream.launch
src/perception/scripts/: chessboard.py  coordinate_system.py  feature_extraction.py  feature_extraction_node.py  feature_simulation.py  histogram_analysis.py  image_processing.py  other_stuff.py  perception_node.py  pose_estimation.py  pose_estimation_node.py  pose_estimation_simulation.py  pose_estimation_simulation_v2 copy.py  pose_estimation_simulation_v2.py  pose_estimation_utils.py
src/simulation/: package.xml
src/simulation/scripts/: auv.py  camera.py  feature.py  simulation.py
src/trajectory_planning/: CMakeLists.txt  package.xml
